--- a/my-project-backend/pom.xml
+++ b/my-project-backend/pom.xml
@@ -107,6 +107,18 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <!--    Minio文件管理框架    -->
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.3.9</version>
+        </dependency>
+        <!--    分页插件    -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-jsqlparser</artifactId>
+            <version>3.5.9</version>
+        </dependency>
     </dependencies>
 
     <!--分别设置开发，生产环境-->
