--- a/my-project-frontend/package.json
+++ b/my-project-frontend/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@vue/compiler-sfc": "^3.5.13",
+    "@vueup/vue-quill": "^1.2.0",
     "@vueuse/core": "^13.1.0",
     "axios": "^1.8.4",
     "element-plus": "^2.9.7",
     "pinia": "^3.0.2",
+    "quill-delta-to-html": "^0.12.1",
+    "quill-image-resize-vue": "^1.0.4",
+    "quill-image-super-solution-module": "^2.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
